--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,30 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/*.crswap": true
+    "**/*.crswap": true,
+    "**.nvmrc": true,
+    "**/.babelrc": true,
+    "**/.editorconfig": true,
+    "**/.eslintignore": true,
+    "**/.eslintrc.**": true,
+    "**/.eslintrc.js": true,
+    "**/.github": true,
+    "**/.gitignore": true,
+    "**/.next": true,
+    "**/.prettierignore": true,
+    "**/.prettierrc": true,
+    "**/.yarn": true,
+    "**/Dockerfile": true,
+    "**/jest.config.js": true,
+    "**/jsconfig.json": true,
+    "**/LICENSE.txt": true,
+    "**/next.config.js": true,
+    "**/node_modules": true,
+    "**/package-lock.json": true,
+    "**/package.json": true,
+    "**/postcss.config.js": true,
+    "**/tsconfig.json": true,
+    "**/yarn.lock": true
   },
   "hide-files.files": []
 }
