--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,35 @@
 {
   "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "**/*.crswap": true,
-    "**.nvmrc": true,
-    "**/.babelrc": true,
-    "**/.editorconfig": true,
-    "**/.eslintignore": true,
-    "**/.eslintrc.**": true,
-    "**/.eslintrc.js": true,
-    "**/.github": true,
-    "**/.gitignore": true,
-    "**/.next": true,
-    "**/.prettierignore": true,
-    "**/.prettierrc": true,
-    "**/.yarn": true,
-    "**/Dockerfile": true,
-    "**/jest.config.js": true,
-    "**/jsconfig.json": true,
-    "**/LICENSE.txt": true,
-    "**/next.config.js": true,
-    "**/node_modules": true,
-    "**/package-lock.json": true,
-    "**/package.json": true,
-    "**/postcss.config.js": true,
-    "**/tsconfig.json": true,
-    "**/yarn.lock": true
+    "**/.git": false,
+    "**/.svn": false,
+    "**/.hg": false,
+    "**/CVS": false,
+    "**/.DS_Store": false,
+    "**/Thumbs.db": false,
+    "**/*.crswap": false,
+    "**.nvmrc": false,
+    "**/.babelrc": false,
+    "**/.editorconfig": false,
+    "**/.eslintignore": false,
+    "**/.eslintrc.**": false,
+    "**/.eslintrc.js": false,
+    "**/.github": false,
+    "**/.gitignore": false,
+    "**/.next": false,
+    "**/.prettierignore": false,
+    "**/.prettierrc": false,
+    "**/.yarn": false,
+    "**/Dockerfile": false,
+    "**/jest.config.js": false,
+    "**/jsconfig.json": false,
+    "**/LICENSE.txt": false,
+    "**/next.config.js": false,
+    "**/node_modules": false,
+    "**/package-lock.json": false,
+    "**/package.json": false,
+    "**/postcss.config.js": false,
+    "**/tsconfig.json": false,
+    "**/yarn.lock": false
   },
   "hide-files.files": []
 }
